<resources>
    <string name="app_name">Aula Geo</string>

    <string name="st_descricao">Descrição...</string>
    <string name="stentrada">Entrada</string>
    <string name="stpraprincipal">Prato Principal</string>
    <string name="stsobremesa">Sobremesa</string>
    <string name="stlanche">Lanche</string>
    <string name="foto">Foto</string>
    <string name="buttonSalvar">Salvar</string>

    <string name="google_maps">AIzaSyAWhMULdBRvdNSqYqlngPRZeaRMUMAh2qw</string>
</resources>
